COPRS-35: renaming cgsrs to coprs
